src/main/java/com/example/diploma/errors/BadRequestException.java
package com.example.diploma.errors;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class BadRequestException extends RuntimeException {
    private ApiError error;
}
